--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -82,7 +82,8 @@ nav a:hover {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px; 
-}
+    max-height: 70vh;
+    }
 
 #hero-img {
     width: 100%;
@@ -108,6 +109,13 @@ nav a:hover {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
+}
+
+#hero-box img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    display: block;
 }
 
 .book, 
@@ -265,6 +273,38 @@ h2 {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
+}
+
+/*Blog Layout */
+
+.blog-container {
+    max-width: 900px;
+    margin: 50px auto;
+    padding: 20px;
+}
+
+.blog-post {
+    background-color: var(--neutral);
+    padding: 25px;
+    margin-bottom: 40px;
+    border-left: 12px solid var(--accent); /* Added this as a nice little touch to spruce up the blog post boxes themselves */
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.2); /* Saw that adding a small box shadow is what a lot of pro designers do */
+}
+
+.blog-post h2 {
+    margin-top: 0;
+}
+
+.post-date {
+    font-size: 0.9em;
+    color: #555;
+    margin-bottom: 10px;
+}
+
+.blog-img {
+    width: 35%;
+    border-radius: 4px;
+    margin: 15px 0;
 }
 
 /* Media query section-- this needs to be at the end of the css */
