Added a dropdown on hover element to my home page's navigation bar to additional future sub-pages

--- a/personalsite/styles/style.css
+++ b/personalsite/styles/style.css
@@ -72,6 +72,59 @@ nav a:hover {
     color: var(---primary-color);
 }
 
+/* Nav Link hover dorpdowns */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    text-decoration: none;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
+    font-size: 1.1rem;
+    font-weight: 600;
+    font-family: var(--heading-font);
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover {
+    background: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--primary-color);
+    min-width: 180px;
+    border-radius: 5px;
+    box-shadow: 0px 8px 14px rgba(0,0,0,0.25);
+    z-index: 10;
+    overflow: hidden;
+}
+
+.dropdown-content a {
+    color: var(--secondary-color);
+    padding: 0.75rem 1rem;
+    text-decoration: none;
+    display: block;
+    font-family: var(--heading-font);
+    font-size: 1rem;
+}
+
+.dropdown-content a:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 /* Hero section */
 .hero {
     text-align: center;
