--- a/personalsite/styles/style.css
+++ b/personalsite/styles/style.css
@@ -213,3 +213,15 @@ footer {
     margin-top: 3rem;
     font-family: var(--heading-font);
 }
+
+.footer-link {
+    color: var(--secondary-color);
+    text-decoration: none;
+    font-family: var(--heading-font);
+    font-weight: 600;
+}
+
+.footer-link:hover {
+    color: var(--accent2-color);
+    text-decoration: underline;
+}
